bpo-38643: Assertion failures when calling PyNumber_ToBase() with an invalid base

If a base other than 2, 8, or 16 is passed to PyNumber_ToBase(), an
assertion failure will occur.  An exception should be raised instead.